# books

./: .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
books/: README.md  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
books/api/: serializers.py  viewsets.py
books/migrations/: 0001_initial.py  0002_review.py  0003_book_cover.py  0004_auto_20210528_1413.py  0005_auto_20210603_1537.py  0006_auto_20210623_1525.py  0007_auto_20210714_0945.py
bookstore_project/: settings.py  urls.py
orders/: urls.py  views.py
pages/: tests.py  views.py
templates/: _base.html  about.html  home.html  signup.html
templates/account/: login.html  logout.html
templates/account/email/: email_confirmation_message.txt
templates/books/: book_detail.html  book_list.html  search_results.html
templates/orders/: charge.html  purchase.html
users/: models.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_first_name.py
